fix: add default p spacing for HeroBlock summary

--- a/src/scss/HeroBlock.scss
+++ b/src/scss/HeroBlock.scss
@@ -33,6 +33,10 @@
 		@include WARNING__('Use simple markup only');
 	}
 
+	.HeroBlock__summary > p {
+		margin-bottom: $baseVMargin;
+	}
+
 	.HeroBlock__buttons {
 	}
 
